--- a/index.html
+++ b/index.html
@@ -6,37 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz Challenge</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="assets\css\style.css" />
 </head>
 
 <body>
-        <!--this is the start container-->
-    <div class="container">
+
+    <header>
         <h1 class="welcome">Are you ready?</h1>
-        <div id="start"> 
-                    <button id="start">Start Quiz</button></div>
-        <div id="quiz" style="display: none">  
-            <div id="question"></div> 
+    </header>
+    <!--this is the start container-->
+    <div id="start" class="container">
+        <div>
+            <button id="start">Start Quiz</button>
+        </div>
+        <div id="quiz" style="display: none">
+            <div id="question">
             <div id="choices">
                 <div class="choice" Id="A" onclick="checkAnswer('A')"></div>
                 <div class="choice" Id="B" onclick="checkAnswer('B')"></div>
                 <div class="choice" Id="C" onclick="checkAnswer('C')"></div>
                 <div class="choice" Id="D" onclick="checkAnswer('D')"></div>
                 <div class="choice" Id="E" onclick="checkAnswer('E')"></div>
-                </div>
-        <!-- create timer -->
-        <div id="timer">
-            <div id="counter">60</div>
-            <div id="countdown"></div>
+            </div>
+            <!-- create timer -->
+            <div id="timer">
+                <div id="counter">60</div>
+                <div id="countdown"></div>
+            </div>
+            <!--keep track of score -->
+            <div id="progress">
+            </div>
+            <div id="score"></div>
         </div>
-        <!--keep track of score -->
-        <div id="progress">
-        </div>
-        <div id="score"></div>
-    </div>
-    
-    <!-- script-->
-    <script src="./assets/javascript/script.js"></script>
+
+        <!-- script-->
+        <script src="assets\javascript\script.js"></script>
 </body>
 
 </html>
