modified css properties

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 <body>
 
     <header>
-        <h1 class="welcome">Are you ready?</h1>
+        <h1 class="welcome">Welcome Easy Street Quiz</h1>
+        <p> A quiz where the answers are given to you! </p>
     </header>
+    <!--this is the intro-->
+     <!-- Intro to Quiz -->
+     <div id="intro_container"  class="container">
+        <h1>Easy Street</h1>
+        <p>Ready To Score A 100!?</p>
+        <button id="start" class="btn">Start Quiz</button>
+    </div>
     <!--this is the start container-->
-    <div id="start" class="container">
-        <div>
-            <button id="start">Start Quiz</button>
-        </div>
+    <div id="start_container" class="container">
         <div id="quiz" style="display: none">
             <div id="question">
             <div id="choices">
@@ -37,6 +42,8 @@
             <div id="progress">
             </div>
             <div id="score"></div>
+        </div>
+        </div>
         </div>
 
         <!-- script-->
